@@ -59,6 +59,7 @@ EXPECTED_ARGS=4
 
 E_BADARGS=1
 E_TOOLNOTF=50
+E_MAKEMKV=253
 
 OUTPUT_ERROR="$HOME/.xbmc/userdata/addon_data/script.video.swiss.army.knife/log/bluray-error.log"
 JOBFILE="$HOME/.xbmc/userdata/addon_data/script.video.swiss.army.knife/JOB"
@@ -127,7 +128,32 @@ fi
 makemkvcon --messages=/dev/null --progress=bluray.progress mkv $PARA $4 $2 > /dev/null 2>&1  &
 ) > /dev/null 2>&1
 
+echo
+echo INFO wait 30 secounds
+echo
+
 sleep 30
+
+# We need to be sure that makemkvcon is running in background ...
+# If this is not the case we exit the script.
+
+PID1=$(ps axu | grep "makemkvcon \-\-m" | grep -v grep | awk '{print $2}')
+if [ -z "$PID1" ] ; then
+    echo
+    echo makemkvcon is not running after 30 secounds. Please check your
+    echo settings and configuration and licence-key
+    echo
+    exit $E_MAKEMKV
+fi
+
+echo
+echo INFO pid makemkvon[$PID1]
+echo
+
+
+
+
+
 
 echo $1 > $JOBFILE
 echo 1 > ~/.xbmc/userdata/addon_data/script.video.swiss.army.knife/progress/stages-counter
